# kibana

./: .i18nrc.json  WORKSPACE.bazel  package.json  tsconfig.json
.ci/: Dockerfile
.github/: CODEOWNERS
api_docs/: spaces_oss.json  spaces_oss.mdx
docs/development/core/public/: kibana-plugin-core-public.md  kibana-plugin-core-public.savedobject.md
docs/development/core/server/: kibana-plugin-core-server.md  kibana-plugin-core-server.savedobject.md  kibana-plugin-core-server.savedobjectsbulkcreateobject.md  kibana-plugin-core-server.savedobjectscreateoptions.md  kibana-plugin-core-server.savedobjectstype.md
scripts/: check_dependency_ownership.js  kibana.js
src/cli/serve/: serve.js
src/core/public/: index.ts  public.api.md
src/core/public/saved_objects/: index.ts
src/core/server/: index.ts  not_ready_core_route_handler_context.ts  server.api.md  server.ts
src/core/server/capabilities/: capabilities_service.ts
src/core/server/core_app/: core_app.ts
src/core/server/http/: http_service.ts  types.ts
src/core/server/http_resources/: http_resources_service.ts  types.ts
src/core/server/i18n/: i18n_service.ts
src/core/server/plugins/: plugins_service.ts  plugins_system.ts  types.ts
src/core/server/rendering/: rendering_service.tsx  types.ts
src/core/server/saved_objects/: index.ts  types.ts
src/core/server/ui_settings/: types.ts  ui_settings_client.ts  ui_settings_service.ts
src/core/types/: saved_objects.ts
src/core_plugins/console/server/: proxy_route.js
src/core_plugins/kibana/: index.js
src/core_plugins/kibana/public/: kibana.js
src/dev/renovate/: check_dependency_ownership_cli.ts  get_dependencies_without_owners.ts  index.ts
src/functional_test_runner/lib/config/: schema.js
src/legacy/ui/ui_render/: setup_ui_render_mixin.js
src/optimize/: base_optimizer.js
src/plugins/data/public/: public.api.md
src/plugins/embeddable/public/: public.api.md
src/plugins/setup/: README.md  jest.config.js  kibana.json
src/plugins/setup/public/: app.tsx  index.ts  plugin.tsx
src/plugins/setup/server/: index.ts  plugin.ts
src/plugins/spaces_oss/: kibana.json  tsconfig.json
src/plugins/spaces_oss/server/: index.ts  mocks.ts  plugin.test.ts  plugin.ts  (+1 more)
src/server/: kbn_server.js
src/setup/: tsconfig.json
src/setup/public/: index.ts  setup_app.tsx
src/setup/server/: bootstrap.ts  index.ts  kibana_setup_server.ts
src/ui/ui_render/: ui_render_mixin.js
x-pack/: tsconfig.json
x-pack/dev-tools/jest/: create_jest_config.js
x-pack/plugins/demo_feature/: kibana.json
x-pack/plugins/maps/: kibana.json
x-pack/plugins/ml/: index.js
x-pack/plugins/security/: index.js
x-pack/plugins/spaces/: index.js  index.ts
x-pack/plugins/xpack_main/: index.js
x-pack/scripts/: functional_tests.js
x-pack/test/functional/: config.js
x-pack/test/saved_object_access_control/: config.ts
(+233 files in other folders)
